--- a/CSS Selectors/style.css
+++ b/CSS Selectors/style.css
@@ -1,70 +1,57 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   min-height: 200vh;
 }
 
 h1,
 h2 {
   font-family: Lato;
-  margin:40px;
-}
-.outer-container{
-  height:75vh;
-  width:75vh;
-  border: 3px dashed black;
-  margin:60px auto;
-  /* position:relative; */
-  /* position:absolute; */
+  margin: 40px;
 }
 
-.inner-container{
-  height:40vh;
-  width:40vh;
-  border: 2px solid blue;
-  margin:150px auto;
-  /* position:relative; */
-  /* position:absolute; */
+#idOne {
+  color: red;
 }
 
-/**
-* Absolute position need a parent whoes position is relative (if any)
-* if not => the element is positioned based on the initial block/content/boundary 
+.test {
+  color: blue;
+}
+
+/** Specificity Order 
+  * id > class > type
+  * Reference: https://developer.mozilla.org/en-US/docs/Web/CSS/Specificity
 */
-.position-absolute {
-  background-color: aqua;
-  width: 100px;
-  height: 100px;
-  position:absolute;
-  top:10px;
-  left:10px;
-}
-.position-relative {
-  background-color: gray;
-  width: 100px;
-  height: 100px;
-  position:relative;
-  top:300px;
-  left:300px;
-}
-.position-fixed {
-  background-color: green;
-  width: 100px;
-  height: 100px;
-  position:fixed;
-  top:100px;
-  left:400px;
+
+/* More specificity than id and class */
+#idOne.test {
+  color: aqua;
 }
 
-.position-sticky {
-  background-color: red;
-  width: 100px;
-  height: 100px;
-  position: sticky;
-  left:0px;
-  top:0;
+#outer {
+  font-size: 1rem;
+  height: 140px;
+  width: 400px;
+  margin: 0.75em;
+  padding: 0.75em;
+  border: 1px solid black;
+}
+
+/* Selector to select any dynamic id/class/type with a pattern */
+
+#outer div[class*="parent-container"] h2 {
+  font-size: 1.2rem;
+  margin: 0.5em;
+}
+
+.error-message {
+  color: blueviolet;
+}
+
+.error-message {
+  color: chartreuse;
 }
